<resources>
    <string name="app_name">Quiz App</string>
    <string name="author">Author: Agnieszka</string>
    <string name="action_about">About</string>

    <!--QUIZ_LIST_STRINGS:-->
    <string name="score">Score:</string>
    <string name="best_score">Best:</string>

    <string name="answer_correct">Your answer is correct :)</string>
    <string name="answer_incorrect">Your answer is incorrect :(</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="ok">ok</string>

    <!--Question 1-->
    <string name="q1_question">How many values boolean has?</string>
    <string name="q1_answer">two</string>
    <!--Question 2-->
    <string name="q2_question">Is String immutable?</string>
    <!--Question 3-->
    <string name="q3_question">Which methods are from class Activity?</string>
    <string name="q3_answer1">onCreate(Bundle savedInstanceState)</string>
    <string name="q3_answer2">onDestroy()</string>
    <string name="q3_answer3">onInit()</string>
    <string name="q3_answer4">onStop()</string>
    <!--Question 4-->
    <string name="q4_question">Which is primitive?</string>
    <string name="q4_answer1">int</string>
    <string name="q4_answer2">Integer</string>
    <string name="q4_answer3">String</string>
    <string name="q4_answer4">Boolean</string>

</resources>
