<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agusiao.apps.quizapp.OneQuestionActivity">

    <TextView
        android:id="@+id/ONE_TV_Question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/MARGIN_STD"
        android:layout_marginRight="@dimen/MARGIN_STD"
        android:layout_marginTop="@dimen/MARGIN_STD"
        android:text="@string/q4_question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ONE_BTN_OK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/MARGIN_STD"
        android:layout_marginRight="@dimen/MARGIN_STD"
        android:layout_marginTop="@dimen/MARGIN_STD"
        android:text="@string/ok"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ONE_RG_Answers" />

    <RadioGroup
        android:id="@+id/ONE_RG_Answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/MARGIN_STD"
        android:layout_marginRight="@dimen/MARGIN_STD"
        android:layout_marginTop="@dimen/MARGIN_STD"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ONE_TV_Question">

        <RadioButton
            android:id="@+id/ONE_RB_Answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/q4_answer1" />

        <RadioButton
            android:id="@+id/ONE_RB_Answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_answer2" />

        <RadioButton
            android:id="@+id/ONE_RB_Answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_answer3" />

        <RadioButton
            android:id="@+id/ONE_RB_Answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_answer4" />

    </RadioGroup>
</android.support.constraint.ConstraintLayout>
