<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agusiao.apps.quizapp.MultiQuestionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MUL_TV_Question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/MARGIN_STD"
                android:layout_marginRight="@dimen/MARGIN_STD"
                android:layout_marginTop="@dimen/MARGIN_STD"
                android:text="@string/q3_question"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/MUL_CB_Answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/MARGIN_STD"
                android:layout_marginRight="@dimen/MARGIN_STD"
                android:layout_marginTop="@dimen/MARGIN_STD"
                android:text="@string/q3_answer1" />

            <CheckBox
                android:id="@+id/MUL_CB_Answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/MARGIN_STD"
                android:layout_marginRight="@dimen/MARGIN_STD"
                android:layout_marginTop="@dimen/MARGIN_STD"
                android:text="@string/q3_answer2" />

            <CheckBox
                android:id="@+id/MUL_CB_Answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/MARGIN_STD"
                android:layout_marginRight="@dimen/MARGIN_STD"
                android:layout_marginTop="@dimen/MARGIN_STD"
                android:text="@string/q3_answer3" />

            <CheckBox
                android:id="@+id/MUL_CB_Answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/MARGIN_STD"
                android:layout_marginRight="@dimen/MARGIN_STD"
                android:layout_marginTop="@dimen/MARGIN_STD"
                android:text="@string/q3_answer4" />

            <Button
                android:id="@+id/MUl_BTN_Ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/MARGIN_STD"
                android:layout_marginRight="@dimen/MARGIN_STD"
                android:layout_marginTop="@dimen/MARGIN_STD"
                android:text="@string/ok" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
